--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,11 +6,39 @@
         
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>        
         <link rel="stylesheet" href="/assets/css/styles.css">
+        <link href="/assets/css/datepicker.css" rel="stylesheet" type="text/css"/>
         {% block stylesheets %} {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% block script %}{% endblock %}
     </head>
     <body>
+        {% block nav %}
+            <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
+        <a class="navbar-brand" href="{{ path('home') }}">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="343px" height="147px" class="d-inline-block align-top" alt="">						
+        </a>
+        <div class="collapse navbar-collapse ml-4" id="navbarNav">
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ path('reglementation') }}">Réglementation</a>
+                  </li>
+                  <!--  trigger modal -->
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ path('doc') }}">Documentation</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ path('codes') }}">Codes planning</a>
+                  </li>				  
+              </ul>
+        </div>
+        <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Agent, NNI... Service">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+        </form>			  
+    </nav>
+        {% endblock %}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
