--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,55 +1,34 @@
 {% extends 'base.html.twig' %}
 
-
-
 {% block stylesheet %}{% endblock %}
 
 {% block title %} Accueil {% endblock %}
 
 {% block body %}   
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
-        <a class="navbar-brand" href="#">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="343px" height="147px" class="d-inline-block align-top" alt="">						
-        </a>
-        <div class="collapse navbar-collapse ml-4" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Documentation</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#">Codes planning</a>
-                  </li>				  
-              </ul>
-        </div>
-        <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="Agent, NNI... Service">
-              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Rechercher</button>
-        </form>			  
-    </nav>
+    
     <header class="text-center py-3">
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Bienvenue sur </em>PLANNING TRANCHE</h1>
             <p>La nouvelle application de saisie du planning des agents, pour les arrêts de tranche.</p>
-    </header>		
-    <div class="my-5">
+    </header>
+                  
+                  
+    <div class="my-2">
         <div class="container bg-light homeCards">
             <div class= "row">
                 <div class="col-8 offset-2">				
                     <div class="card-deck text-center">
                         <div class="card">							
                         <div class="card-body">
-                            <h3 class="card-title text-white mb-5">Agent, <BR>chef d'équipe...</h3>							
+                            <h3 class="card-title mb-5">Agent, <BR>chef d'équipe...</h3>							
                             <p class="card-text mx-3 mb-5"><strong>Voir, imprimer, modifier </strong><br>mon planning ou celui de mon équipe sur le prochain arrêt de tranche.</p>
-                            <button type="button" class="btn btn-primary btn-lg"><i class="fas fa-eye"></i> Voir le planning</button>
+                            <a href="{{path('seeplanning')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-eye"></i> Voir le planning</a>
                         </div>
                         </div>
                         <div class="card">							
                         <div class="card-body">
-                            <h3 class="card-title text-white mb-5">Appui RH, <br>Délégué ressources...</h3>							
+                            <h3 class="card-title mb-5">Appui RH, <br>Délégué ressources...</h3>							
                             <p class="card-text mx-3 mb-5"><strong>Renseigner</strong><br> le prochain arrêt de tranche, les vacances scolaires, le code planning...</p>
-                            <button type="button" class="btn btn-primary btn-lg"><i class="fas fa-edit"></i> Editer les informations</button>
+                            <a href="{{path('accueiladmin')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-edit"></i> Editer les informations</a>
                         </div>
                     </div>
                 </div>
