--- a/app/Resources/views/default/seePlanning.html.twig
+++ b/app/Resources/views/default/seePlanning.html.twig
@@ -33,14 +33,14 @@
                                 <td colspan="1" class="align-middle">                                    
                                     
                                 </td>
-                                <td colspan="1" class="align-middle"></td>                                
+                                <td colspan="2" class="align-middle"></td>                                
                                 <td class="align-middle"><a href="{{ path('home') }}"><i class="fas fa-angle-left fa-2x"></i></a></td>
                                 <td colspan="3"> <em>Juin 2018</em> <br>semaine 6</td>
                                 <td class="align-middle"><a href="{{ path('home') }}"><i class="fas fa-angle-right fa-2x"></i></a></td>
                                 <td colspan="4"></td>
                             </tr>
                             <tr>
-                                <td>Vacances scolaires</td>
+                                <td colspan="2">Vacances scolaires</td>                                
                                 <td class="bg-holidays"></td>
                                 <td class="bg-holidays"></td>
                                 <td class="bg-holidays"></td>
@@ -53,7 +53,7 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>Arrets de tranche</td>
+                                <td colspan="2">Arrets de tranche</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
@@ -66,7 +66,7 @@
                                 <td></td>
                             </tr>                           
                             <tr>
-                                <th class ="col-md-2"></th>
+                                <th colspan="2" class ="col-md-2"></th>
                                 <th class ="col-md-1">Dimanche</th>
                                 <th class ="col-md-1">Lundi</th>
                                 <th class ="col-md-1">Mardi</th>
@@ -77,7 +77,7 @@
                                 <th class ="col-md-1" colspan="3"></th>
                             </tr>
                             <tr>
-                                <td class ="td-sm"><i class="fa fa-sort float-right" aria-hidden="true"> </i><a href="{{ path('home') }}"><i class="fas fa-plus"></i> Ajouter</a></td>
+                                <td colspan="2" class ="td-sm"><i class="fa fa-sort float-right" aria-hidden="true"> </i><a href="{{ path('home') }}"><i class="fas fa-plus"></i> Ajouter</a></td>
                                 <td class ="td-sm">10</td>
                                 <td class ="td-sm">11</td>
                                 <td class ="td-sm">12</td>
@@ -86,13 +86,13 @@
                                 <td class ="td-sm">15</td>
                                 <td class ="td-sm">16</td>
                                 <td class ="td-sm">Total</td>
-                                <td class ="td-sm"></td>
-                                <td class ="td-sm"></td>                                
+                                                             
                             </tr> 
                         </thead>                        
                         <tbody>
                             <tr>
                                 <td>Jean Dupont</td>
+                                <td>RSP primaire</td>
                                 <td class="bg-h">H</td>
                                 <td>J</td>
                                 <td>J</td>
@@ -101,12 +101,12 @@
                                 <td>J</td>
                                 <td class="bg-r">R</td>
                                 <td>44</td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-trash-alt"></i></a</td>
+                                
                                  
                             </tr>
                             <tr>
-                                <td>Michel Dupuis</td>
+                                <td>Michel Dray</td>
+                                 <td>RSP primaire</td>
                                 <td class="bg-h">H</td>
                                 <td>J</td>
                                 <td>J</td>
@@ -115,11 +115,11 @@
                                 <td>J</td>
                                 <td>J</td>
                                 <td>44</td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-trash-alt"></i></a</td>
+                                
                             </tr>
                             <tr>
                                 <td>Jacques Legrand</td>
+                                <td>RSP primaire</td>
                                 <td class="bg-h">H</td>
                                 <td>J</td>
                                 <td>J</td>
@@ -128,11 +128,11 @@
                                 <td>J</td>
                                 <td>J</td>
                                 <td>48</td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-trash-alt"></i></a</td>
+                                
                             </tr>
                             <tr>
                                 <td>Michel Duchaussoy</td>
+                                <td>RSP primaire</td>
                                 <td class="bg-h">H</td>
                                 <td>J</td>
                                 <td>J</td>
@@ -141,8 +141,7 @@
                                 <td>J</td>
                                 <td>J</td>
                                 <td>45</td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('home') }}"><i class="fas fa-trash-alt"></i></a</td>
+                                
                             </tr>
                             <tr>
                                 <th></th>
@@ -153,9 +152,7 @@
                                 <td></td>
                                 <td></td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td></td>                                
                             </tr>
                         </tbody>
                     </table>                    
