--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -1,20 +1,45 @@
 {% extends 'base.html.twig' %}
+
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>{% endblock %}
-{% block body %}
+{% block body %}   
     <div class="container">
+        
+        
+        {{ form_start(form) }}
+                        {{ form_row(form.startDate, {'label': false}) }}
+                   
+        {{ form_end(form) }}
+        
+        
+            <form class="form-inline">
+                <div class="form-group mb-2">
+                  <label for="starDate">Début</label>
+                  <input type="date" id="starDate" value="email@example.com">
+                </div>                            
+                <div class="form-group mx-sm-3 mb-2">
+                  <label for="endDate">Fin</label>
+                  <input type="date" class="form-control" id="endDate" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2 sendDate">Envoyer</button>
+            </form>
+        
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                          <tr>
                             <i id="addRow" class="fas fa-plus text-primary"></i>
+                        </tr>
                         <tr>
-                            <th scope ="col" ></th>
-                            {% for agenda in agendas %}
-                             <th class="">{{ agenda.date|date("d") }}</th>
-                            {% endfor %}                            
-                            <th></th>          
+                        
+                        </tr>
+                        <tr>
+                            <th scope ="col" ></th>                            
+                            {% for arraydate in arraydates %}
+                                <th class="">{{ arraydate|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
+                            {% endfor %}   
+                            </th>          
                         </tr>
                     </thead>
                      <tbody>
@@ -54,14 +79,36 @@
                      </tbody>                 
                  </table>
                 <h2>Description : <span id="titre"></span></h2>
+                <h2></h2>
                 <h2>Détail : <span id="producteur"></span></h2>
-                <table>
-                    <tr>
-                        {% for agenda in agendas %}
-                             <td class="">{{ agenda.date|date("d") }}</td>
-                        {% endfor %}                        
-                    </tr>
-                </table>
+                <h2>Maintenant : {{ now | localizeddate('none', 'none', 'fr', null, 'EEEE d MMMM Y') }}</h2>
+                <h2>Dans un mois : {{ end | date("F jS \\a\\t g:ia", "Europe/Paris") }}  </h2>
+                <h2> {% for agent in agent1 %}                                                
+                         <th class="">{{ agent.letter }}</th>
+                    {% endfor %}   
+                </h2>
+                <h2> {% for agent in agent2 %}
+                         <th class="">{{ agent.letter }}</th>
+                    {% endfor %}
+                </h2>
+                <h2> {% for agent in agent3 %}
+                         <th class="">{{agent.letter }}</th>
+                    {% endfor %}
+                </h2>
+                <h2> {% for d in db %}
+                         <th class="">{{d.date|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
+                    {% endfor %}
+                </h2> 
+                <h2> {% for d in db %}
+                         <th class="">{{d.letter }}</th>
+                    {% endfor %}
+                </h2>
+                
+               {# {% for dateBetween in dateBetweens %}
+                    <th class="">{{dateBetween.date | date("F jS \\a\\t g:ia", "Europe/Paris") }}</th>
+                    {% endfor %}
+                #}    
+                
             </div>
         </div>
     </div> 
