--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -13,7 +13,7 @@
             {{ form_rest(form) }}
             {{ form_end(form) }}
                 </div
-            </form>               
+            </form>
             
             {#<form action="{{ path('agendaTeam') }}" method="POST" class="form-inline">                
                 <div class="form-group mb-2">
@@ -31,8 +31,8 @@
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                     <thead class="thead-dark">
-                         <tr>
+                    <thead class="thead-dark">
+                        <tr>
                             <i id="addRow" class="fas fa-plus text-primary"></i>
                         </tr>
                         <tr>
@@ -47,10 +47,10 @@
                         </tr>
                          {{ dump (agentBetweens) }}
                     </thead>
-                     <tbody>
+                    <tbody>
                         {% for agentBetween in agentBetweens %}
                             <tr>
-                                <td>{#{{agentBetween.0.agent  }}#}</td>
+                                <td>{{agentBetween.0.agent  }}</td>
                                {% for letter in agentBetween %}
                                     <td class="editFor">{{ letter.letter }}</td>
                                 {% endfor %}
@@ -58,17 +58,16 @@
                                 <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>
                             </tr>
                        {% endfor %}
-                         </tr>
-                     </tbody>                 
-                 </table>
+                        </tr>
+                    </tbody>                 
+                </table>
                 <h2>Description : <span id="titre"></span></h2>
                 <h2></h2>
                 <h2>Détail : <span id="producteur"></span></h2>                
                {# {% for dateBetween in dateBetweens %}
                     <th class="">{{dateBetween.date | date("F jS \\a\\t g:ia", "Europe/Paris") }}</th>
                     {% endfor %}
-                #}    
-                
+                #}
             </div>
         </div>
     </div> 
