--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -7,25 +7,27 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des équipes</h1>
+        <h1>Equipe {{team.name }}</h1>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (teams) }}
+                {{ dump (agents) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
                             <th>Nom</th>
-                            <th>Code d'arrêt</th>
-                            <th>Composition</th>
+                            <th>Prénom</th>
+                            <th>NNI</th>
+                            <th>Editer</th>
                         </tr>
                     </thead>                    
                     <tbody> 
-                       {%for team in teams %}
+                       {%for agent in agents %}
                             <tr>                                                            
-                                <td>{{ team.id }}</td>
-                                <td>{{ team.name }}</td>
-                                <td>{{ team.Event.code }}</td>
+                                <td>{{ agent.id }}</td>
+                                <td>{{ agent.name }}</td>
+                                <td>{{ agent.firstName }}</td>
+                                <td>{{ agent.nni }}</td>
                                 <td><a href="{{ path('showAgents', { 'id': team.id }) }}"><i class="fas fa-eye"></i></a></td>                               
                             </tr>
                         {% endfor %}                       
