--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -8,7 +8,7 @@
 {% block body %}   
     <div class="container">       
         <h1>Voici la liste des evenements</h1>
-        <form action="{{ path('createEvent') }}" method="post" class="form-inline">
+        <form class="form-inline">
             <div class="form-group mb-2">            
             </div
         </form>
@@ -32,8 +32,9 @@
                                 <td class="editFor">{{ event.eventtype }}</td>
                                 <td class="editFor">{{ event.code }}</td>
                                 <td class="editFor">{{ event.startdate|localizeddate('none', 'none', 'fr', null, 'E dd Y') }}</td>
-                                <td class="editFor">{{ event.enddate|localizeddate('none', 'none', 'fr', null, 'E dd Y')  }}</td>  
-                                <td><a href="{{ path('editEvent', { 'id': event.id }) }}">edit</a></td>
+                                <td class="editFor">{{ event.enddate|localizeddate('none', 'none', 'fr', null, 'E dd Y')  }}</td>                                
+                                <td><a href="{{ path('editEvent', { 'id': event.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('eventDelete', { 'id': event.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                             </tr>
                         {% endfor %}
                     </body>                    
