--- a/app/Resources/views/team/create.html.twig
+++ b/app/Resources/views/team/create.html.twig
@@ -7,16 +7,17 @@
 
 {% block body %}   
     <div class="container">
-        <h1>Créer un nouvel evenement</h1>
-        <form action="{{ path('createEvent') }}" method="post" class="form-inline">
+        <h1>Créer une nouvelle équipe</h1>
+        <form action="{{ path('create_team') }}" method="post" class="form-inline">
             <div class="form-group mb-2">
-            {{ form_start(form) }}
-            {{ form_widget(form.startDate) }}
-            {{ form_widget(form.endDate) }}
-            {{ form_widget(form.code) }}
-            {{ form_widget(form.eventType) }}             
+            {{ form_start(form) }}          
+            {{ form_widget(form.name) }}
+            {{ form_widget(form.Event) }}
+            {{ form_widget(form.Agent) }}
+            {{ form_widget(form.Section) }}
             {{ form_rest(form) }}
-            {{ form_end(form) }}
+            {{ form_end(form) }}            
+            
             </div
         </form>
     </div> 
