--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -33,6 +33,8 @@
                                 <td>{{ agent.function }}</td>
                                 <td>{{ agent.team.name }}</td>
                                 <td>{{ agent.role.name }}</td>
+                                <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td> 
                                 
                                 {#<td><a href="{{ path('editagent', { 'id': agent.id }) }}">edit</a></td>#}                                
                             </tr>
