--- a/app/Resources/views/section/show.html.twig
+++ b/app/Resources/views/section/show.html.twig
@@ -7,32 +7,34 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des services</h1>
+        <h1>Voici la liste des sections</h1>
         <form class="form-inline">
             <div class="form-group mb-2">            
             </div
         </form>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (services) }}
+                {{ dump (sections) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
                             <th>Nom</th>
                             <th>Chef</th>
-                            <th>Code arrêt</th>
+                            <th>Service</th>
+                            <th>Code d'arrêt</th>    
                         </tr>
                     </thead>                    
                     <tbody> 
-                       {%for service in services %}
+                       {%for section in sections %}
                             <tr>                                                            
-                                <td>{{ service.id }}</td>
-                                <td class="editFor">{{ service.name }}</td>
-                                <td class="editFor">{{ service.chief }}</td>
-                                <td class="editFor">{{ service.event.code }}</td>                               
-                                <td><a href="{{ path('editService', { 'id': service.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('deleteService', { 'id': service.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                <td>{{ section.id }}</td>
+                                <td class="editFor">{{ section.name }}</td>
+                                <td class="editFor">{{ section.chief }}</td>
+                                <td class="editFor">{{ section.service.name }}</td>
+                                <td class="editFor">{{ section.event.code }}</td>  
+                                <td><a href="{{ path('editSection', { 'id': section.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteSection', { 'id': section.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
                             </tr>
                         {% endfor %}
                     </body>                    
