--- a/app/Resources/views/team/edit.html.twig
+++ b/app/Resources/views/team/edit.html.twig
@@ -6,18 +6,15 @@
 {% block title %}Welcome!{% endblock %}
 
 {% block body %}   
-    <div class="container">
-        <h1>Créer un nouvel evenement</h1>
-        <form action="{{ path('createEvent') }}" method="post" class="form-inline">
+    <div class="container">       
+        <h1>Modifier l'équipe</h1>
+        <form action="{{ path('editTeam', { 'id': team.id }) }}" method="post" class="form-inline">
             <div class="form-group mb-2">
-            {{ form_start(form) }}
-            {{ form_widget(form.startDate) }}
-            {{ form_widget(form.endDate) }}
-            {{ form_widget(form.code) }}
-            {{ form_widget(form.eventType) }}             
+            {{ form_start(form) }}           
+            {{ form_widget(form) }}                         
             {{ form_rest(form) }}
             {{ form_end(form) }}
-            </div
+            </div            
         </form>
     </div> 
 {% endblock %}
