--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -23,8 +23,8 @@
                     </thead>                    
                     <tbody> 
                        {%for agent in agents %}
-                            <tr>                                                            
-                                
+                            <tr>
+                                <td>{{ agent.id }}</td> 
                                 <td>{{ agent.name }}</td>
                                 <td>{{ agent.firstName }}</td>
                                 <td>{{ agent.nni }}</td>
