--- a/app/Resources/views/default/accueilAdmin.html.twig
+++ b/app/Resources/views/default/accueilAdmin.html.twig
@@ -17,7 +17,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Droits et roles</h5>
                         <p class="card-text">Modifier les droits et rôles sur le planning</p>
-                        <a href="{{ path('droitsroles')}}" class="btn btn-primary">Visualiser</a>
+                        <a href="{{ path('showrole')}}" class="btn btn-primary">Visualiser</a>
                       </div>
                      
                     </div>
@@ -25,7 +25,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Dates clés</h5>
                         <p class="card-text">Vacances scolaires, arrêts de tranche, Copat, RCD</p>
-                        <a href="{{ path('createdatetranche')}}" class="btn btn-primary">Visualiser</a>
+                        <a href="{{ path('showEvent')}}" class="btn btn-primary">Visualiser</a>
                       </div>
                       
                     </div>
@@ -33,7 +33,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Codes planning</h5>
                         <p class="card-text">Ajouter/modifier un lettre. Changer une amplitude horaire</p>
-                        <a href="{{ path('codes')}}" class="btn btn-primary">Visualiser</a>
+                        <a href="{{ path('showletter')}}" class="btn btn-primary">Visualiser</a>
                       </div>                      
                     </div>
                       
@@ -41,7 +41,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Reglementation</h5>
                         <p class="card-text">Ajouter/modifier les contrainte reglementaires</p>
-                        <a href="{{ path('reglementation')}}" class="btn btn-primary">Visualiser</a>
+                        <a href="{{ path('showrule')}}" class="btn btn-primary">Visualiser</a>
                       </div>                      
                     </div>
                       
@@ -49,21 +49,21 @@
                         <div class="card-body">
                           <h5 class="card-title">Equipe</h5>
                           <p class="card-text">Ajouter/modifier les équipes</p>
-                          <a href="{{ path('equipe')}}" class="btn btn-primary">Visualiser</a>
+                          <a href="{{ path('showteam')}}" class="btn btn-primary">Visualiser</a>
                         </div>
                     </div>
                     <div class="card">                      
                         <div class="card-body">
                           <h5 class="card-title">Section</h5>
                           <p class="card-text">Ajouter/modifier la section</p>
-                          <a href="{{ path('section')}}" class="btn btn-primary">Visualiser</a>
+                          <a href="{{ path('section_index')}}" class="btn btn-primary">Visualiser</a>
                         </div>
                     </div>
                     <div class="card">                      
                         <div class="card-body">
                           <h5 class="card-title">Service</h5>
                           <p class="card-text">Ajouter/modifier le service</p>
-                          <a href="{{ path('service')}}" class="btn btn-primary">Visualiser</a>
+                          <a href="{{ path('service_index')}}" class="btn btn-primary">Visualiser</a>
                         </div>
                     </div>
                     <div class="card">                      
