--- a/app/Resources/views/role/edit.html.twig
+++ b/app/Resources/views/role/edit.html.twig
@@ -1,4 +1,3 @@
-{# empty Twig template #}
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
@@ -8,13 +7,13 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Modifier la lettre</h1>        
-        <div class="form-group mb-2">
-        {{ form_start(form) }}           
-        {{ form_widget(form) }}                         
-        {{ form_rest(form) }}
-        {{ form_end(form) }}
-        </div> 
+        <h1>Modifier le role</h1>        
+            <div class="form-group mb-2">
+            {{ form_start(form) }}           
+            {{ form_widget(form) }}                         
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
+            </div>
     </div> 
 {% endblock %}
 
