--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,29 +12,31 @@
     </head>
     <body>
         {% block nav %}
-            <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
-        <a class="navbar-brand" href="{{ path('home') }}">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="343px" height="147px" class="d-inline-block align-top" alt="">						
-        </a>
-        <div class="collapse navbar-collapse ml-4" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ path('reglementation') }}">Réglementation</a>
-                  </li>
-                  <!--  trigger modal -->
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ path('doc') }}">Documentation</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{{ path('codes') }}">Codes planning</a>
-                  </li>				  
-              </ul>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light py-3" style="background-color: #e3f2fd;">
+                <a class="navbar-brand" href="{{ path('home') }}">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="343px" height="147px" class="d-inline-block align-top" alt="">						
+                </a>
+                <div class="collapse navbar-collapse ml-4" id="navbarNav">
+                      <ul class="navbar-nav">
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showrule') }}">Réglementation</a>
+                          </li>
+                          <!--  trigger modal -->
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('doc') }}">Documentation</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showletter') }}">Codes planning</a>
+                          </li>				  
+                      </ul>
+                </div>
+                <form class="form-inline">
+                      <input class="form-control mr-sm-2" type="search" placeholder="Agent, NNI... Service">
+                      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
+                </form>			  
+            </nav>
         </div>
-        <form class="form-inline">
-              <input class="form-control mr-sm-2" type="search" placeholder="Agent, NNI... Service">
-              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="fas fa-search"></i></button>
-        </form>			  
-    </nav>                
         {% endblock %}
     
     {% for label, messages in app.flashes %}
@@ -45,7 +47,8 @@
         {% endfor %}
     {% endfor %}
     
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         {% block javascripts %}{% endblock %}        
     </body>
