--- a/app/Resources/views/event/show.html.twig
+++ b/app/Resources/views/event/show.html.twig
@@ -7,14 +7,24 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des evenements</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Evènements </em></h1>
+            <p>Voici la liste des évènements</p>
+        </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('createEvent') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>
         <form class="form-inline">
             <div class="form-group mb-2">            
             </div
         </form>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (events) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
