--- a/app/Resources/views/letter/show.html.twig
+++ b/app/Resources/views/letter/show.html.twig
@@ -7,10 +7,20 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des lettres</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Code Planning</em></h1>
+            <p>Voici la liste des Codes planning</p>
+        </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('createLetter') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (letters) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
@@ -21,17 +31,18 @@
                             <th>Heure de début</th>
                             <th>Heure de fin</th>
                         </tr>
-                    </thead>                    
+                    </thead>                   
                     <tbody>                        
                         {%for letter in letters %}
                             <tr>                                                            
                                 <td>{{ letter.id }}</td>
                                 <td>{{ letter.letter }}</td>
-                                <td>{{ letter.timeRange}}</td> 
+                                <td>A compléter</td> 
                                 <td>{{ letter.effectiveDuration}}</td>
                                 <th>{{ letter.starttime|date|localizeddate('none', 'none', 'fr', null, 'H:mm') }}</th>
                                 <th>{{ letter.endtime|date|localizeddate('none', 'none', 'fr', null, 'H:mm')}}</th>
-                                <td><a href="{{ path('editletter', { 'id': letter.id }) }}">edit</a></td>                                
+                                <td><a href="{{ path('editLetter', { 'id': letter.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteLetter', { 'id': letter.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                
                             </tr>
                         {% endfor %}
                     </body>                    
