--- a/app/Resources/views/role/show.html.twig
+++ b/app/Resources/views/role/show.html.twig
@@ -7,15 +7,19 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des roles</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Roles </em></h1>
+            <p>Voici la liste des roles</p>
+        </header>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (roles) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
-                            <th>Nom</th> 
+                            <th>Nom</th>
+                            <th></th>
+                            <th></th> 
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -23,7 +27,8 @@
                             <tr>                                                            
                                 <td>{{ role.id }}</td>
                                 <td>{{ role.name }}</td>                                
-                                <td><a href="{{ path('home', { 'id': role.id }) }}">edit</a></td>                                
+                                <td><a href="{{ path('editRole', { 'id': role.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteRole', { 'id': role.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                 
                             </tr>
                         {% endfor %}                       
                     </body>                    
