--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -7,10 +7,25 @@
 
 {% block body %}
     <div class="container">       
-        <h1>Voici la liste des contraintes reglementaires</h1>
-        <div class= "row">
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Contraintes réglementaires </em></h1>
+            <p>Voici la liste des contraintes réglementaires</p>
+        </header>
+        <div class= "row py-3">
             <div class="col-md-10">
-                {{ dump (rules) }}
+                <h5>Règlementation du travail :</h5>
+                <ul>
+                    <li>Semaine légale du dimanche 0 heures au samedi 24 heures</li>
+                    <li>Repos hebdomadaire de 35 heures minimum, avec un H de 24 heures minimum, entouré de 11 heures avant ou après ou autour. Les 11 heures peuvent déborder sur la semaine suivante. En revanche pas le H.</li>
+                    <li>Respect de 11 heures de repos entre 2 journées de travail</li>
+                    <li>10 heures par jour max</li>
+                    <li>48 heures max par semaine</li>
+                    <li>44 heures max par semaine en moyenne sur 12 semaines</li>
+                </ul>                 
+            </div>
+        </div>
+        <div class="row py-3">            
+            <div class="col-md-10">                
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
@@ -33,8 +48,6 @@
                                 <td>{{ rule.MaxHourPerWeek }}</td>
                                 <td>{{ rule.MaxAverageperWeek }}</td>
                                 <td>{{ rule.nbWeekForAverage }}</td>
-                                
-                                {#<td><a href="{{ path('editrule', { 'id': rule.id }) }}">edit</a></td>#}                                
                             </tr>
                         {% endfor %}                       
                     </body>                    
