--- a/app/Resources/views/section/show.html.twig
+++ b/app/Resources/views/section/show.html.twig
@@ -7,14 +7,16 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des sections</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Section </em></h1>
+            <p>Voici la liste des sections</p>
+        </header>
         <form class="form-inline">
             <div class="form-group mb-2">            
             </div
         </form>
         <div class= "row">
-            <div class="col-md-10">
-                {{ dump (sections) }}
+            <div class="col-md-10">                
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
