--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -5,16 +5,16 @@
 {% endblock %}
 {% block title %}Welcome!{% endblock %}
 
-{% block body %}   
-    <div class="container">       
-        <h1>Voici la liste des services</h1>
-        <form class="form-inline">
-            <div class="form-group mb-2">            
-            </div
-        </form>
+
+
+{% block body %}
+    <header class="text-center py-3">
+    <h1 class="bg-white-semi_transparent"><em class="text-dark">Service </em></h1>
+    <p>Composition du service</p>
+    </header>
+    <div class="container">
         <div class= "row">
-            <div class="col-md-10">
-                {{ dump (services) }}
+            <div class="col-md-10">                
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
@@ -22,6 +22,8 @@
                             <th>Nom</th>
                             <th>Chef</th>
                             <th>Code arrêt</th>
+                            <th></th>
+                            <th></th>
                         </tr>
                     </thead>                    
                     <tbody> 
