--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -7,10 +7,20 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Voici la liste des équipes</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipes </em></h1>
+            <p>Voici la liste des équipes</p>
+        </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('create_team') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>                
         <div class= "row">
-            <div class="col-md-10">
-                {{ dump (teams) }}
+            <div class="col-md-10">                
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
@@ -18,7 +28,7 @@
                             <th>Nom</th>
                             <th>Code d'arrêt</th>                            
                             <th>Section</th>
-                            <th>Visualiser</th>
+                            <th>Composition</th>
                             <th>Editer</th>
                             <th>Modifier</th>
                         </tr>
