--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -7,10 +7,12 @@
 
 {% block body %}   
     <div class="container">       
-        <h1>Equipe {{team.name }}</h1>
+        <header class="text-center py-3">
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipe {{team.name }} </em></h1>
+            <p>Voici la composition de l'équipe</p>
+        </header>
         <div class= "row">
             <div class="col-md-10">
-                {{ dump (agents) }}
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
