--- a/app/Resources/views/agent/showOne.html.twig
+++ b/app/Resources/views/agent/showOne.html.twig
@@ -8,41 +8,35 @@
 {% block body %}   
     <div class="container">       
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Section </em></h1>
-            <p>Voici la liste des sections</p>
+            <h1 class="bg-white-semi_transparent"><em class="text-dark">Agent {{agent.name}} </em></h1>
+            <p>Voici la fiche de l'agent</p>
         </header>
-        <div class="row">
-            <div class="col-md-1">
-                <span class="fa-stack fa-1x my-2">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                    <a href="{{ path('createSection') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
-                </span>                    
-            </div>                
-        </div>        
         <div class= "row">
-            <div class="col-md-10">                
+            <div class="col-md-12">               
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
                      <thead class="thead-dark">
                         <tr>
                             <th>id</th>
+                            <th>NNI</th>
                             <th>Nom</th>
-                            <th>Chef</th>
-                            <th>Service</th>
-                            <th>Code d'arrêt</th>    
+                            <th>Prénom</th>
+                            <th>Fonction</th>
+                            <th>Equipe</th>
+                            <th>Role</th>
                         </tr>
                     </thead>                    
-                    <tbody> 
-                       {%for section in sections %}
-                            <tr>                                                            
-                                <td>{{ section.id }}</td>
-                                <td class="editFor">{{ section.name }}</td>
-                                <td class="editFor">{{ section.chief }}</td>
-                                <td class="editFor">{{ section.service.name }}</td>
-                                <td class="editFor">{{ section.event.code }}</td>  
-                                <td><a href="{{ path('editSection', { 'id': section.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('deleteSection', { 'id': section.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
-                            </tr>
-                        {% endfor %}
+                    <tbody>
+                        <tr>                                                            
+                            <td>{{ agent.id }}</td>
+                            <td>{{ agent.nni }}</td>
+                            <td>{{ agent.name }}</td>
+                            <td>{{ agent.firstname }}</td>
+                            <td>{{ agent.function }}</td>
+                            <td>{{ agent.team.name }}</td>
+                            <td>{{ agent.role.name }}</td>
+                            <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
+                            <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td> 
+                        </tr>                                               
                     </body>                    
                 </table>
             </div>
