--- a/app/Resources/views/role/create.html.twig
+++ b/app/Resources/views/role/create.html.twig
@@ -6,44 +6,14 @@
 {% block title %}Welcome!{% endblock %}
 
 {% block body %}   
-    <div class="container">       
-        <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Agents </em></h1>
-            <p>Voici la liste des agents</p>
-        </header>
-        <div class= "row">
-            <div class="col-md-12">               
-                <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                     <thead class="thead-dark">
-                        <tr>
-                            <th>id</th>
-                            <th>NNI</th>
-                            <th>Nom</th>
-                            <th>Prénom</th>
-                            <th>Fonction</th>
-                            <th>Equipe</th>
-                            <th>Role</th>
-                        </tr>
-                    </thead>                    
-                    <tbody> 
-                       {%for agent in agents %}
-                            <tr>                                                            
-                                <td>{{ agent.id }}</td>
-                                <td>{{ agent.nni }}</td>
-                                <td>{{ agent.name }}</td>
-                                <td>{{ agent.firstname }}</td>
-                                <td>{{ agent.function }}</td>
-                                <td>{{ agent.team.name }}</td>
-                                <td>{{ agent.role.name }}</td>
-                                <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td> 
-                            </tr>
-                        {% endfor %}                       
-                    </body>                    
-                </table>
-            </div>
-        </div>
-    </div>       
+    <div class="container">
+        <h1>Créer une nouveau role</h1>       
+        <div class="form-group mb-2">
+        {{ form_start(form) }} 
+        {{ form_rest(form) }}
+        {{ form_end(form) }}
+        </div>     
+    </div> 
 {% endblock %}
 
 
