--- a/app/Resources/views/role/show.html.twig
+++ b/app/Resources/views/role/show.html.twig
@@ -11,6 +11,14 @@
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Roles </em></h1>
             <p>Voici la liste des roles</p>
         </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('createRole') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
