--- a/app/Resources/views/rule/create.html.twig
+++ b/app/Resources/views/rule/create.html.twig
@@ -7,12 +7,12 @@
 
 {% block body %}   
     <div class="container">
-        <h1>Créer un nouvelle section</h1>        
+        <h1>Créer une nouvelle règle</h1>       
         <div class="form-group mb-2">
         {{ form_start(form) }} 
         {{ form_rest(form) }}
         {{ form_end(form) }}
-        </div>        
+        </div>     
     </div> 
 {% endblock %}
 
