--- a/app/Resources/views/rule/edit.html.twig
+++ b/app/Resources/views/rule/edit.html.twig
@@ -6,13 +6,14 @@
 {% block title %}Welcome!{% endblock %}
 
 {% block body %}   
-    <div class="container">
-        <h1>Créer un nouvelle section</h1>        
-        <div class="form-group mb-2">
-        {{ form_start(form) }} 
-        {{ form_rest(form) }}
-        {{ form_end(form) }}
-        </div>        
+    <div class="container">       
+        <h1>Modifier les règles</h1>        
+            <div class="form-group mb-2">
+            {{ form_start(form) }}           
+            {{ form_widget(form) }}                         
+            {{ form_rest(form) }}
+            {{ form_end(form) }}
+            </div>
     </div> 
 {% endblock %}
 
