--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -11,6 +11,14 @@
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Contraintes réglementaires </em></h1>
             <p>Voici la liste des contraintes réglementaires</p>
         </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('createRule') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>
         <div class= "row py-3">
             <div class="col-md-10">
                 <h5>Règlementation du travail :</h5>
@@ -36,6 +44,9 @@
                             <th>Nombre d'heures maximum par semaine</th>
                             <th>Nombre d'heures maximum en moyenne sur X semaine</th>
                             <th>X semaine</th>
+                            <th></th>
+                             <th></th>
+                            
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -48,6 +59,8 @@
                                 <td>{{ rule.MaxHourPerWeek }}</td>
                                 <td>{{ rule.MaxAverageperWeek }}</td>
                                 <td>{{ rule.nbWeekForAverage }}</td>
+                                <td><a href="{{ path('editRule', { 'id': rule.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteRule', { 'id': rule.id }) }}"><i class="fas fa-trash-alt"></i></a></td> 
                             </tr>
                         {% endfor %}                       
                     </body>                    
