--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -8,11 +8,19 @@
 
 
 {% block body %}
-    <header class="text-center py-3">
-    <h1 class="bg-white-semi_transparent"><em class="text-dark">Service </em></h1>
-    <p>Composition du service</p>
-    </header>
     <div class="container">
+        <header class="text-center py-3">
+        <h1 class="bg-white-semi_transparent"><em class="text-dark">Service </em></h1>
+        <p>Composition du service</p>
+        </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('createService') }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>    
         <div class= "row">
             <div class="col-md-10">                
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
