--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -29,8 +29,11 @@
                             <th>Code d'arrêt</th>                            
                             <th>Section</th>
                             <th>Composition</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
                             <th>Editer</th>
                             <th>Modifier</th>
+                           
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -39,10 +42,13 @@
                                 <td>{{ team.id }}</td>
                                 <td>{{ team.name }}</td>
                                 <td>{{ team.event.code }}</td>                                
-                                <td>{{ team.section.name}}</td>
-                                <td><a href="{{ path('showAgents', { 'id': team.id }) }}"><i class="fas fa-eye"></i></a></td> 
+                                <td>{{ team.section.name}}</td>                                
+                                <td><a href="{{ path('showAgents', { 'id': team.id }) }}"><i class="fas fa-eye"></i></a></td>
+                                <td>{{ team.event.startDate|date|localizeddate('none', 'none', 'fr', null, 'E dd MM Y') }}</td>
+                                <td>{{ team.event.endDate|date|localizeddate('none', 'none', 'fr', null, 'E dd MM Y') }}</td>
                                 <td><a href="{{ path('editTeam', { 'id': team.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('deleteTeam', { 'id': team.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                                                              
+                                <td><a href="{{ path('deleteTeam', { 'id': team.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                
                             </tr>
                         {% endfor %}                       
                     </body>                    
