--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -11,6 +11,14 @@
             <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipe {{team.name }} </em></h1>
             <p>Voici la composition de l'équipe</p>
         </header>
+        <div class="row">
+            <div class="col-md-1">
+                <span class="fa-stack fa-1x my-2">
+                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <a href="{{ path('addAgent', { 'id': team.id }) }}"><i class="fas fa-plus fa-stack-1x fa-inverse"></i></a>                    
+                </span>                    
+            </div>                
+        </div>  
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
@@ -20,7 +28,9 @@
                             <th>Nom</th>
                             <th>Prénom</th>
                             <th>NNI</th>
+                            <th>Voir</th>
                             <th>Editer</th>
+                            <th>Supprimer</th>
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -30,7 +40,9 @@
                                 <td>{{ agent.name }}</td>
                                 <td>{{ agent.firstName }}</td>
                                 <td>{{ agent.nni }}</td>
-                                <td><a href="{{ path('showAgents', { 'id': team.id }) }}"><i class="fas fa-eye"></i></a></td>                               
+                                <td><a href="{{ path('findAgent', { 'id': agent.id }) }}"><i class="fas fa-eye"></i></a></td></td>
+                                <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
+                                <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                              
                             </tr>
                         {% endfor %}                       
                     </body>                    
