--- a/app/Resources/views/default/accueilAdmin.html.twig
+++ b/app/Resources/views/default/accueilAdmin.html.twig
@@ -23,7 +23,7 @@
                     </div>
                     <div class="card">                      
                       <div class="card-body">
-                        <h5 class="card-title">Dates clés</h5>
+                        <h5 class="card-title">Evènement</h5>
                         <p class="card-text">Vacances scolaires, arrêts de tranche, Copat, RCD</p>
                         <a href="{{ path('showEvent')}}" class="btn btn-primary">Visualiser</a>
                       </div>
@@ -56,14 +56,14 @@
                         <div class="card-body">
                           <h5 class="card-title">Section</h5>
                           <p class="card-text">Ajouter/modifier la section</p>
-                          <a href="{{ path('section_index')}}" class="btn btn-primary">Visualiser</a>
+                          <a href="{{ path('showSection')}}" class="btn btn-primary">Visualiser</a>
                         </div>
                     </div>
                     <div class="card">                      
                         <div class="card-body">
                           <h5 class="card-title">Service</h5>
                           <p class="card-text">Ajouter/modifier le service</p>
-                          <a href="{{ path('service_index')}}" class="btn btn-primary">Visualiser</a>
+                          <a href="{{ path('ShowService')}}" class="btn btn-primary">Visualiser</a>
                         </div>
                     </div>
                     <div class="card">                      
