--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -20,7 +20,7 @@
                         <div class="card-body">
                             <h3 class="card-title mb-5">Agent, <BR>chef d'équipe...</h3>							
                             <p class="card-text mx-3 mb-5"><strong>Voir, imprimer, modifier </strong><br>mon planning ou celui de mon équipe sur le prochain arrêt de tranche.</p>
-                            <a href="{{path('agendaTeam')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-eye"></i> Voir le planning</a>
+                            <a href="{{path('showAgenda')}}" class="btn btn-primary btn-lg" role="button"><i class="fas fa-eye"></i> Voir le planning</a>
                         </div>
                         </div>
                         <div class="card">							
