--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -3,69 +3,36 @@
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>{% endblock %}
 {% block body %}   
-    <div class="container">
-        
-            <form action="{{ path('agendaTeam') }}" method="post" class="form-inline">
-                <div class="form-group mb-2">
+    <div class="container">        
+        <form action="{{ path('showAgenda') }}" method="post" class="form form-inline my-3">
+            <div class="form-group mb-2">
             {{ form_start(form) }}                     
             {{ form_rest(form) }}
             {{ form_end(form) }}
-                </div
-            </form>
-            
-            {#<form action="{{ path('agendaTeam') }}" method="POST" class="form-inline">                
-                <div class="form-group mb-2">
-                  <label for="starDate">Début</label>
-                  <input type="date" id="startDate" name="startDate" value="email@example.com">
-                </div>                            
-                <div class="form-group mx-sm-3 mb-2">
-                  <label for="endDate">Fin</label>
-                  <input type="date" class="form-control" id="endDate" name="endDate" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-primary mb-2 sendDate">Envoyer</button>
-            </form>#}
-            
-        
+            </div
+        </form>
         <div class= "row">
             <div class="col-md-10">
                 <table id="example" class="table table-striped table-hover table-sm shadow-lg" style="width:100%">
-                    <thead class="thead-dark">
-                        <tr>
-                            <i id="addRow" class="fas fa-plus text-primary"></i>
-                        </tr>
-                        <tr>
-                        
-                        </tr>
+                    <thead class="thead-dark">                        
                         <tr>
                             <th scope ="col" ></th>                            
                             {% for dateBetween in dateBetweens %}
-                                <th class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
-                            {% endfor %}   
-                            </th>          
-                        </tr>
-                         {#{{ dump (eventBetweens) }}#}
+                            <th class="">{{ dateBetween.date|localizeddate('none', 'none', 'fr', null, 'E d') }}</th>
+                            {% endfor %}  
+                        </tr>                         
                     </thead>
-                    <tbody>
-                        {#{% for eventBetween in eventBetweens %}
-                            <tr>
-                                <td>{{eventBetween.0.agent.name  }}</td>
-                               {% for letter in agentBetween %}
-                                    <td class="editFor">{{ letter.letter.letter }}</td>
-                                {% endfor %}
-                                <td class="update" scope ="col"><i class="fas fa-check"></i></td>
-                                <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>
-                            </tr>
-                       {% endfor %}#}
-                        
-                        {{ dump (agentBetweens) }}
+                    <tbody>                        
                         {% for agentBetween in agentBetweens %}
-                            <tr>                                
+                            <tr>                               
                                 <td>{{agentBetween.0.agent.name  }}</td>
                                {% for letter in agentBetween %}
                                     <td class="editFor">{{ letter.letter.letter }}</td>
                                 {% endfor %}
                                 <td class="update" scope ="col"><i class="fas fa-check"></i></td>
-                                <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>
+                                <td class="trash" scope ="col"><i class="fas fa-trash-alt"></i></td>                                
+                                <td><a href="{{ path('deleteAgenda', { 'agentId': agentBetween.0.agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                {#{{ dump(agentBetween.0.agent.id) }}#}
                             </tr>
                        {% endfor %}
                         </tr>
