--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,20 +15,37 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light py-3" style="background-color: #e3f2fd;">
                 <a class="navbar-brand" href="{{ path('home') }}">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="343px" height="147px" class="d-inline-block align-top" alt="">						
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/%C3%89lectricit%C3%A9_de_France_logo.svg/1200px-%C3%89lectricit%C3%A9_de_France_logo.svg.png" width="171px" height="auto" class="d-inline-block align-top" alt="">						
                 </a>
                 <div class="collapse navbar-collapse ml-4" id="navbarNav">
                       <ul class="navbar-nav">
                           <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showrule') }}">Réglementation</a>
-                          </li>
-                          <!--  trigger modal -->
-                          <li class="nav-item">
-                              <a class="nav-link" href="{{ path('doc') }}">Documentation</a>
+                              <a class="nav-link" href="{{ path('showAgenda') }}">Agenda</a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" href="{{ path('showletter') }}">Codes planning</a>
-                          </li>				  
+                              <a class="nav-link" href="{{ path('showrule') }}">Règles</a>
+                          </li>
+                           <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showagent') }}">Agents</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showteam') }}">Equipes</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showletter') }}">Codes</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showSection') }}">Section</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('ShowService') }}">Service</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('showEvent') }}">Arrêt</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{{ path('doc') }}">Doc</a>
+                          </li>                          				  
                       </ul>
                 </div>
                 <form class="form-inline">
