--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -48,7 +48,7 @@
                                 <td>{{ agent.nni }}</td>
                                 <td><a href="{{ path('findAgent', { 'id': agent.id }) }}"><i class="fas fa-eye"></i></a></td></td>
                                 <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
-                                <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                              
+                                <td><a href="{{ path('removeAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>                              
                             </tr>
                         {% endfor %}                       
                     </body>                    
